--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "devDependencies": {
 	"brfs": "~1.4.3",
 	"uglifyify": "~3.0.2"
+    },
+    "dependencies": {
+	"store": "~1.3.20"
     }
 }
